fix modal size on mobile phones

--- a/src/components/todo/todo.css
+++ b/src/components/todo/todo.css
@@ -172,4 +172,8 @@
     overflow: auto;
     grid-auto-flow: row;
   }
+
+  .modalSection {
+    width: auto;
+  }
 }
